# TA-aws-trusted-advisor

./: .appinspect.manualcheck.yaml  .gitignore  .gitlab-ci-release.yml  .gitlab-ci.yml  .uccignore  Makefile  README  README.md  build.sh  config.mk  globalConfig.json  license-eula.txt  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: dependabot.yaml
.github/workflows/: build-and-package.yaml
docs/: conf.py  index.rst
package/: README.md  app.manifest
package/README.old/: inputs.conf.spec
package/appserver/static/: html_render.js
package/default/: app.conf  inputs.conf
package/default/data/ui/views/: trusted_advisor.xml
package/lib/: requirements.txt
package/lookups/: ta_categories.csv  trusted_advisor_checks.csv
package/static/default/: app.conf  collections.conf  restmap.conf  savedsearches.conf
package/static/default/data/ui/views/: inputs.xml
src/TA-aws-trusted-advisor/: README.md  app.manifest
src/TA-aws-trusted-advisor/default/: commands.conf  inputs.conf  props.conf  restmap.conf  transforms.conf
src/TA-aws-trusted-advisor/default/data/ui/views/: trusted_advisor.xml
src/TA-aws-trusted-advisor/lookups/: trusted_advisor_checks.csv
src/TA-aws-trusted-advisor/static/default/: commands.conf  inputs.conf  macros.conf  web.conf
src/TA-aws-trusted-advisor/static/default/data/ui/nav/: default.xml
src/TA-aws-trusted-advisor/static/default/data/ui/views/: configuration.xml  trusted_advisor.xml
