[tool.poetry]
name = "TA-aws-trusted-advisor"
version = "1.0.0"
description = "AWS Trusted Advisor"
authors = ["Will Searle <will@splunk.engineer>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.10"
cached-property = "^1.5.2"
versioningit = "^2.1.0"

#[tool.poetry.dev-dependencies]
coverage = "*"
crudini = "*"
#docker-compose = "*"
future = "*"
lovely-pytest-docker = "*"
mock = "*"
pytest = "*"
pytest-expect = "*"
pytest-html = "*"
pytest-ordering = "*"
pytest-rerunfailures = "*"
pytest-splunk-addon = "*"
pytest-splunk-addon-ui-smartx = "*"
pytest-xdist = "*"
requests = "*"
reuse = "*"
six = "*"
splunk-add-on-ucc-framework = {git = "https://github.com/livehybrid/addonfactory-ucc-generator.git", rev = "ws-add-no-conflict"}
# todo: remove the path reference when this installs in a virtualenv ok
splunk-packaging-toolkit = {url = "https://github.com/NHSDigital/splunk-packaging-toolkit-whl/releases/download/v2021.09.26.10.44/splunk_packaging_toolkit-1.0.1-py3-none-any.whl"}
splunk-sdk = "*"
u-msgpack-python = "*"
wheel = "*"
splunk-appinspect = "*"
typing-extensions = "*"
attr = "^0.3.2"
grip = "^4.6.2"
pandoc = "^2.3"


[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".git .venv venv build deps tests/deps node_modules package"
addopts = """-v
    --tb=long
    --splunk-app=./package
    --splunk-data-generator=./package/default
    --splunk-type=external
    --splunk-hec-token=abcd1234
    --event-file-path=tmp/events.pickle
    --sc4s-host=sc4s
    --junitxml=tmp/reports/xml/test.xml
    --cim-report=tmp/reports/cim-compliance-report.md
    --html=tmp/reports/html/test.html
    -n 1
"""
#   --discard-eventlogs

filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests"
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"

[tool.versioningit.next-version]
method = "minor-release"

[tool.versioningit.format]
distance = "{version}{distance:02d}"
dirty = "{version}+dirty"
distance-dirty = "{version}{distance:02d}"
#distance = "{version}.post{distance}+{vcs}{rev}"
#dirty = "{version}+dirty"
#distance-dirty = "{version}.post{distance}+{vcs}{rev}.dirty"

[build-system]
requires = [
    "poetry>=1.0.0",
    "versioningit >= 0.2.1"
]
build-backend = "poetry.masonry.api"
