[tool.poetry]
name = "TA-aws-trusted-advisor"
version = "1.0.0"
description = "AWS Trusted Advisor"
authors = ["Will Searle <will@splunk.engineer>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.10"
cached-property = "1.5.2"
versioningit = "3.0.0"

#[tool.poetry.dev-dependencies]
coverage = "7.2.7"
crudini = "0.9.5"
#docker-compose = "*"
future = "0.18.3"
lovely-pytest-docker = "0.3.1"
mock = "5.1.0"
pytest = "7.4.4"
pytest-expect = "1.1.0"
pytest-html = "3.2.0"
pytest-ordering = "0.6"
pytest-rerunfailures = "13.0"
pytest-splunk-addon = "5.2.4"
pytest-splunk-addon-ui-smartx = "3.0.1"
pytest-xdist = "2.5.0"
requests = "2.31.0"
reuse = "1.1.2"
six = "1.16.0"
splunk-add-on-ucc-framework = "^5.39.0"
# todo: remove the path reference when this installs in a virtualenv ok
splunk-packaging-toolkit = {url = "https://github.com/NHSDigital/splunk-packaging-toolkit-whl/releases/download/v2021.09.26.10.44/splunk_packaging_toolkit-1.0.1-py3-none-any.whl"}
splunk-sdk = "1.7.4"
u-msgpack-python = "2.8.0"
wheel = "0.42.0"
splunk-appinspect = "^3.3.0"
typing-extensions = "4.7.1"
attr = "0.3.2"
grip = "4.6.2"
pandoc = "2.3"


[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".git .venv venv build deps tests/deps node_modules package"
addopts = """-v
    --tb=long
    --splunk-app=./package
    --splunk-data-generator=./package/default
    --splunk-type=external
    --splunk-hec-token=abcd1234
    --event-file-path=tmp/events.pickle
    --sc4s-host=sc4s
    --junitxml=tmp/reports/xml/test.xml
    --cim-report=tmp/reports/cim-compliance-report.md
    --html=tmp/reports/html/test.html
    -n 1
"""
#   --discard-eventlogs

filterwarnings = [
    "ignore::DeprecationWarning"
]
testpaths = [
    "tests"
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"

[tool.versioningit.next-version]
method = "minor-release"

[tool.versioningit.format]
distance = "{version}{distance:02d}"
dirty = "{version}+dirty"
distance-dirty = "{version}{distance:02d}"
#distance = "{version}.post{distance}+{vcs}{rev}"
#dirty = "{version}+dirty"
#distance-dirty = "{version}.post{distance}+{vcs}{rev}.dirty"

[build-system]
requires = [
    "poetry>=1.0.0",
    "versioningit >= 0.2.1"
]
build-backend = "poetry.masonry.api"
